added calendar heatmap image

--- a/us_birth/scripts/us_birth.Rmd
+++ b/us_birth/scripts/us_birth.Rmd
@@ -77,9 +77,10 @@ births_ts <- xts(births_ts[,-1], order.by = as.Date(births_ts[,'date'], format="
 # import calendar heat map
 source("https://raw.githubusercontent.com/iascchen/VisHealth/master/R/calendarHeat.R")
 
-calendarHeat(births_ts$date, births_ts$births, ncolors = 99, color = "g2r", varname="US Births from 2000 to 2003")
+calendar_heatmap <- calendarHeat(births_ts$date, births_ts$births, ncolors = 99, color = "g2r", varname="US Births from 2000 to 2003")
 
-
+dir <- "C:/Users/emuli/OneDrive/Documents/R/Projects/tidytuesday/us_birth/images/calendar_heatmap.jpg"
+ggsave(dir)
 
 ```
 
