--- a/survivors/survivors.Rmd
+++ b/survivors/survivors.Rmd
@@ -216,13 +216,14 @@ immunity_idols_count
 
 ### Radar Chart - Evaluating Players skillset with radar chart
 
+
 We are evaluating player based on:
 1) Social Game: ability to avoid getting voted at at tribal
 2) Challenge Ability: immunity challenges won
 3) 
 
 ```{r}
-
+# TODO
 ```
 
 
@@ -258,7 +259,6 @@ Il y a 16 types de personnalités. On s'attend à ce que le nombre de personnes 
 
 ```{r , echo=FALSE}
 
-
 personality_count <- castaways %>% group_by(personality_type) %>% summarise(count= n()) 
 personality_count$perc <- personality_count$count / nrow(castaways) * 100 
 
@@ -274,6 +274,26 @@ introvert_count(castaways)
 
 ```
 
+### Finding out all the contestants with ___ personality type
+
+```{r, echo=FALSE}
+personality_sort <- function(type){
+  players <- castaways %>% 
+  filter(personality_type == type) %>% 
+  distinct(full_name, .keep_all = TRUE) %>%
+  select(-c("city", "state", "episode", "day", "order", "jury_status", "original_tribe", "swapped_tribe", "swapped_tribe_2", "merged_tribe"))
+  return(players)
+}
+
+# remove NA from vector
+personality_types <- unique(castaways$personality_type) 
+personality_types <- personality_types[!is.na(personality_types)]
+
+# storing players by personality types
+for(type in personality_types){
+  assign(type, personality_sort(type)) # ISTP <- personality_sort('ISTP')
+}
+```
 
 ### Winners votes out 
 
