--- a/mbit/notebooks/cleaning data.ipynb
+++ b/mbit/notebooks/cleaning data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "d511b695",
    "metadata": {},
    "outputs": [],
@@ -288,12 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "5882660d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../data/mbti_clean_subset.csv')"
+    "df.to_csv('../data/mbti_clean_subset.csv', index=False)"
    ]
   },
   {
