added baseline ngrams classifier results with simple neural network

--- a/financials_news_sentimentanalysis/notebooks/Ngrams Vectorizer Classifier.ipynb
+++ b/financials_news_sentimentanalysis/notebooks/Ngrams Vectorizer Classifier.ipynb
@@ -21,17 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "id": "5e9b9a2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import nltk \n",
+    "import torch\n",
+    "\n",
     "\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
+    "from torch import nn, optim\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "id": "7518b979",
    "metadata": {},
    "outputs": [],
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "id": "d17cd0ef",
    "metadata": {},
    "outputs": [],
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "id": "f648ddfe",
    "metadata": {},
    "outputs": [],
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
    "id": "d7d4c323",
    "metadata": {},
    "outputs": [],
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 110,
    "id": "d3383c8b",
    "metadata": {},
    "outputs": [],
@@ -195,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "f5e4a08c",
+   "execution_count": 111,
+   "id": "9ec99f21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +220,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67556f25",
+   "id": "3af73cc7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "54747c02",
+   "id": "8c2a18c8",
    "metadata": {},
    "source": [
     "### Split data into Training and testing"
@@ -233,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9140533f",
+   "id": "50e67745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e824566a",
+   "id": "dc813edb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -257,23 +260,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dffbcfa",
+   "id": "6bd6cc91",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5c992887",
+   "id": "422a75ad",
    "metadata": {},
    "source": [
-    "### Train Models"
+    "### Train Baseline Models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "40f81f5c",
+   "id": "598f1c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "5266dea3",
+   "id": "c6203052",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5639d760",
+   "id": "a99bf730",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "82942ac6",
+   "id": "79fe1479",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +382,170 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4526a78",
+   "id": "70c8c1ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90693833",
+   "metadata": {},
+   "source": [
+    "### Train Basic Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "a18e2a99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleNN(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, num_inputs, num_outputs):\n",
+    "        super(SimpleNN, self).__init__()\n",
+    "        self.fct1 = nn.Linear(num_inputs, 64)\n",
+    "        self.fct2 = nn.Linear(64, num_outputs)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = torch.tanh(self.fct1(x))\n",
+    "        x = torch.sigmoid(self.fct2(x))\n",
+    "        return x\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "94bc3a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def training(n_epochs, model, loss_fn, optim, x_train, y_train):\n",
+    "    losses = []\n",
+    "    for epoch in range(n_epochs):\n",
+    "        for word_vec, label in zip(x_train, y_train):\n",
+    "            word_vec = torch.tensor(word_vec, dtype=torch.float).unsqueeze(0)\n",
+    "            output = model(word_vec)\n",
+    "            loss = loss_fn(output, torch.tensor([label]))\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "        \n",
+    "        losses.append(loss)\n",
+    "        if epoch % 10 == 0:\n",
+    "            print(f\"Epoch {epoch}, Loss {loss}\")\n",
+    "    return losses\n",
+    "\n",
+    "def prediction(model, x_test, y_test):\n",
+    "    y_pred = []\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for word_vec in x_test:\n",
+    "            word_vec = torch.tensor(word_vec, dtype=torch.float).unsqueeze(0)\n",
+    "            output = model(word_vec)\n",
+    "            _, label_pred = torch.max(output, dim=1)\n",
+    "#             print(output, label_pred)\n",
+    "            y_pred.append(label_pred.item())\n",
+    "    \n",
+    "    print(classification_report(y_pred, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85cce3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "04a5c785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss -0.8750810027122498\n",
+      "Epoch 10, Loss -0.985752522945404\n",
+      "Epoch 20, Loss -0.9921588897705078\n",
+      "Epoch 30, Loss -0.9945111274719238\n",
+      "Epoch 40, Loss -0.9969218373298645\n",
+      "Epoch 50, Loss -0.9975041747093201\n",
+      "Epoch 60, Loss -0.9978916049003601\n",
+      "Epoch 70, Loss -0.9981833100318909\n",
+      "Epoch 80, Loss -0.9984081387519836\n",
+      "Epoch 90, Loss -0.9985804557800293\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs, n = 100, 2\n",
+    "num_classes = len(df['Sentiment'].unique())\n",
+    "model = SimpleNN(num_inputs=n, num_outputs=num_classes)\n",
+    "loss_fn = nn.NLLLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=1e-4)\n",
+    "\n",
+    "losses = training(n_epochs, model, loss_fn, optimizer, x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "195cc0eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         0\n",
+      "           1       1.00      0.60      0.75      2364\n",
+      "           2       0.00      0.00      0.00         0\n",
+      "\n",
+      "    accuracy                           0.60      2364\n",
+      "   macro avg       0.33      0.20      0.25      2364\n",
+      "weighted avg       1.00      0.60      0.75      2364\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction(model, x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a924f0be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc4b098d",
    "metadata": {},
    "outputs": [],
    "source": []
