--- a/financials_news_sentimentanalysis/notebooks/word embedding classifiers.ipynb
+++ b/financials_news_sentimentanalysis/notebooks/word embedding classifiers.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fe577e6a",
+   "execution_count": 2,
+   "id": "0fbcee4e",
    "metadata": {},
    "outputs": [
     {
@@ -21,20 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8b9d8dfe",
+   "execution_count": 76,
+   "id": "42685ba5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import string\n",
+    "import numpy as np\n",
     "# import imblearn\n",
     "\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
     "\n",
-    "from gensim.models import word2vec\n",
+    "from gensim.models import Word2Vec\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.base import TransformerMixin, BaseEstimator\n",
@@ -48,16 +51,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5318727",
+   "id": "b3eaa867",
    "metadata": {},
    "source": [
-    "### Get the data"
+    "### Get the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d50ee205",
+   "execution_count": 6,
+   "id": "5564bb23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7e3f5b3c",
+   "execution_count": 7,
+   "id": "91432508",
    "metadata": {},
    "outputs": [
     {
@@ -107,21 +110,6 @@
        "      <td>$ESI on lows, down $1.50 to $2.50 BK a real po...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>For the last quarter of 2010 , Componenta 's n...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>According to the Finnish-Russian Chamber of Co...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Swedish buyout firm has sold its remaining...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -129,32 +117,29 @@
       "text/plain": [
        "                                            Sentence Sentiment\n",
        "0  The GeoSolutions technology will leverage Bene...  positive\n",
-       "1  $ESI on lows, down $1.50 to $2.50 BK a real po...  negative\n",
-       "2  For the last quarter of 2010 , Componenta 's n...  positive\n",
-       "3  According to the Finnish-Russian Chamber of Co...   neutral\n",
-       "4  The Swedish buyout firm has sold its remaining...   neutral"
+       "1  $ESI on lows, down $1.50 to $2.50 BK a real po...  negative"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b952253",
+   "id": "dd67f6bf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c17e9cd7",
+   "id": "7a4a4933",
    "metadata": {},
    "source": [
     "### Build Preprocessing Pipeline"
@@ -162,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4ee87dac",
+   "execution_count": 22,
+   "id": "f7ecf070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +177,10 @@
     "    def normalize(self, sentence):\n",
     "        words = []\n",
     "        for word in sentence.split(' '):\n",
-    "            if word not in self.stop_words: \n",
-    "                words.append(self.lemmatizer.lemmatize(word))\n",
-    "        return ' '.join(words)\n",
+    "            if word not in self.stop_words and word not in string.punctuation and 'http' not in word:\n",
+    "                words.append(self.lemmatizer.lemmatize(word.lower()))\n",
+    "#         return ' '.join(words)\n",
+    "        return words\n",
     "    \n",
     "class LemmerNormalizer(Normalizer):\n",
     "    \n",
@@ -204,14 +190,14 @@
     "    def normalize(self, sentence):\n",
     "        words = []\n",
     "        for word in sentence.split(' '):\n",
-    "            words.append(self.lemmatizer.lemmatize(word))\n",
+    "            words.append(self.lemmatizer.lemmatize(word.lower()))\n",
     "        return ' '.join(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d71135a8",
+   "execution_count": 23,
+   "id": "b73dea66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,98 +221,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c80a2c8e",
+   "execution_count": 52,
+   "id": "69f64147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class NGramsVectorizer(BaseEstimator, TransformerMixin): # TODO\n",
+    "class Word2VecVectorizer(BaseEstimator, TransformerMixin):\n",
     "    \n",
-    "    def __init__(self, n_grams=2):\n",
-    "        super(NGramsVectorizer, self).__init__()\n",
-    "        self.n_grams = n_grams\n",
-    "    \n",
-    "    def fit(self, sentences, labels=None):\n",
-    "        pass\n",
-    "    \n",
-    "    def transform(self, sentences):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d98c392e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Word2VectVectorizer(BaseEstimator, TransformerMixin): # TODO\n",
-    "    \n",
-    "    def __init__(self, n_dim=1000):\n",
-    "        super(Word2VectVectorizer, self).__init__()\n",
-    "        self.n_dim = n_dim\n",
-    "        self.model = None\n",
-    "    \n",
-    "    def fit(self, sentences, labels=None):\n",
-    "        self.model = word2vec.Word2Vec(corpus, vector_size=self.n_dim, window=5, min_count=1)\n",
+    "    def __init__(self, vector_size, window):\n",
+    "        self.vector_size = vector_size\n",
+    "        self.window = window\n",
+    "        \n",
+    "    def fit(self, X, y=None):\n",
+    "        self.model = Word2Vec(sentences=X, vector_size = self.vector_size, \n",
+    "            window = self.window)\n",
     "        return self\n",
     "    \n",
-    "    def transform(self, sentences):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8ec337ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 0 0 0 1 1 0 1 1]\n",
-      " [0 1 1 1 0 0 1 0 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "pipeline = Pipeline([\n",
-    "    ('normalizer', StopWordLemmerNormalizer()),\n",
-    "    ('vectorizer', OneHotVectorizer())\n",
-    "])\n",
+    "    def transform(self, X, y=None):\n",
+    "        X_embeddings = np.array([self._get_embedding(words) for words in X])\n",
+    "        return X_embeddings\n",
     "\n",
-    "texts = [\n",
-    "    \"The S&P500 is up 50 points today\",\n",
-    "    \"Firm to be buyout in the next quarter\"\n",
-    "]\n",
-    "print(pipeline.fit_transform(texts))"
+    "    def _get_embedding(self, words):\n",
+    "        valid_words = [word for word in words if word in self.model.wv.key_to_index]\n",
+    "        if valid_words:\n",
+    "            embedding = np.zeros((len(valid_words), self.vector_size), dtype=np.float32)\n",
+    "            for idx, word in enumerate(valid_words):\n",
+    "                embedding[idx] = self.model.wv[word]\n",
+    "\n",
+    "            return np.mean(embedding, axis=0)\n",
+    "        else:\n",
+    "            return np.zeros(self.vector_size)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ab02f56",
+   "id": "9cfcf3a8",
    "metadata": {},
    "source": [
-    "### Split data into training and testing"
+    "### Get Baseline Classifier Performance with Word2Vec Vectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5b15a8e4",
+   "execution_count": null,
+   "id": "501b75f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ef29837e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_dict = {'positive': 2, 'negative': 0, 'neutral': 1}\n",
-    "y = df['Sentiment'].apply(lambda x: sentiment_dict.get(str(x))).tolist()\n",
-    "X = pipeline.fit_transform(df['Sentence'].tolist()) # FIXME: should I split first, then vectorize?"
+    "X = df['Sentence']\n",
+    "\n",
+    "emotions_map = {'positive': 2, 'negative': 0, 'neutral': 1}\n",
+    "y = df['Sentiment'].apply(lambda x: emotions_map.get(x)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "159bb91d",
+   "execution_count": 68,
+   "id": "453d0101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,53 +294,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20d95147",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e29e09b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c92e712",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16f70aea",
-   "metadata": {},
-   "source": [
-    "### Train Models with TextNorm + OneHotVect pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "9790b56c",
+   "execution_count": 71,
+   "id": "04ffe554",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model_performance(model, x_train, x_test, y_train, y_test):\n",
-    "    model.fit(x_train, y_train)\n",
-    "    y_pred = model.predict(x_test)\n",
+    "def get_classifier_performance(model, x_train, x_test, y_train, y_test):\n",
+    "    pipeline = Pipeline([\n",
+    "        ('normalizer', StopWordLemmerNormalizer()),\n",
+    "        ('embedding', Word2VecVectorizer(100, 5)),\n",
+    "        ('model', model)\n",
+    "    ])\n",
+    "    pipeline.fit(x_train,y_train)\n",
+    "    y_pred = pipeline.predict(x_test)\n",
     "    print(classification_report(y_pred, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "5d78941a",
+   "execution_count": 72,
+   "id": "2eede056",
    "metadata": {},
    "outputs": [
     {
@@ -390,52 +322,25 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.17      0.34      0.22       119\n",
-      "           1       0.87      0.68      0.77      1224\n",
-      "           2       0.58      0.77      0.66       410\n",
-      "\n",
-      "    accuracy                           0.68      1753\n",
-      "   macro avg       0.54      0.60      0.55      1753\n",
-      "weighted avg       0.76      0.68      0.71      1753\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "get_model_performance(XGBClassifier(), x_train, x_test, y_train, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "b9c0cbd5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.38      0.22      0.27       423\n",
-      "           1       0.54      0.70      0.61       752\n",
-      "           2       0.51      0.49      0.50       578\n",
+      "           0       0.06      0.07      0.06       199\n",
+      "           1       0.72      0.57      0.64      1204\n",
+      "           2       0.32      0.53      0.40       350\n",
       "\n",
       "    accuracy                           0.51      1753\n",
-      "   macro avg       0.48      0.47      0.46      1753\n",
-      "weighted avg       0.49      0.51      0.49      1753\n",
+      "   macro avg       0.37      0.39      0.37      1753\n",
+      "weighted avg       0.57      0.51      0.53      1753\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "get_model_performance(GaussianNB(), x_train, x_test, y_train, y_test)"
+    "get_classifier_performance(XGBClassifier(), x_train, x_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "1418d654",
+   "execution_count": 73,
+   "id": "1f244f1c",
    "metadata": {},
    "outputs": [
     {
@@ -444,45 +349,118 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.19      0.17      0.18       272\n",
-      "           1       0.69      0.68      0.69       976\n",
-      "           2       0.60      0.66      0.63       505\n",
+      "           0       0.15      0.09      0.11       373\n",
+      "           1       0.50      0.55      0.52       863\n",
+      "           2       0.37      0.41      0.39       517\n",
       "\n",
-      "    accuracy                           0.59      1753\n",
-      "   macro avg       0.50      0.50      0.50      1753\n",
-      "weighted avg       0.59      0.59      0.59      1753\n",
+      "    accuracy                           0.41      1753\n",
+      "   macro avg       0.34      0.35      0.34      1753\n",
+      "weighted avg       0.38      0.41      0.39      1753\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "get_model_performance(DecisionTreeClassifier(), x_train, x_test, y_train, y_test)"
+    "get_classifier_performance(DecisionTreeClassifier(), x_train, x_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6df998ca",
+   "execution_count": 74,
+   "id": "2829c60b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         0\n",
+      "           1       0.95      0.57      0.71      1598\n",
+      "           2       0.12      0.44      0.19       155\n",
+      "\n",
+      "    accuracy                           0.55      1753\n",
+      "   macro avg       0.36      0.33      0.30      1753\n",
+      "weighted avg       0.88      0.55      0.66      1753\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/yukikongju/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
-    "get_model_performance(LogisticRegression(), x_train, x_test, y_train, y_test)"
+    "get_classifier_performance(SGDClassifier(), x_train, x_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7116e96",
+   "execution_count": 75,
+   "id": "5314d9ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.38      0.21      0.27       406\n",
+      "           1       0.70      0.59      0.64      1126\n",
+      "           2       0.09      0.24      0.13       221\n",
+      "\n",
+      "    accuracy                           0.46      1753\n",
+      "   macro avg       0.39      0.35      0.35      1753\n",
+      "weighted avg       0.55      0.46      0.49      1753\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "get_model_performance(SGDClassifier(), x_train, x_test, y_train, y_test)"
+    "get_classifier_performance(GaussianNB(), x_train, x_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "25389487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.18      0.17      0.17       227\n",
+      "           1       0.74      0.58      0.65      1206\n",
+      "           2       0.24      0.43      0.31       320\n",
+      "\n",
+      "    accuracy                           0.50      1753\n",
+      "   macro avg       0.38      0.40      0.38      1753\n",
+      "weighted avg       0.57      0.50      0.53      1753\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_classifier_performance(KNeighborsClassifier(), x_train, x_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca014b0",
+   "id": "8b17a48d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a0738bc",
+   "id": "ffec81f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -498,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061a276d",
+   "id": "b0980525",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -506,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0192c0bd",
+   "id": "63ac958a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -514,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d223fc1e",
+   "id": "b6d869d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -522,7 +500,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85b8ab0f",
+   "id": "edf52831",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21fcb81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6879b352",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57698cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "611d4f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fafe9ca",
    "metadata": {},
    "outputs": [],
    "source": []
